First cut for interactive mode
